--- a/maze.html
+++ b/maze.html
@@ -3,28 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-<div>
+<h1>The Maze</h1>
+<div class="random">
     <button id="random">Generate Random Maze</button>
 </div>
 
-<div>
+<div class="file">
     <input type="file" name="fileToUpload" id="fileToUpload">
     <span class="readBytesButtons">
         <button>Generate Uploaded Maze</button>
     </span>
 </div>
 <div id="maze"></div>
-<div class="json_btn">
+<div class="json_btn gen_json">
     <button id="create">Generate JSON</button> <a id="downloadlink" style="display: none">Download</a>
 </div>
-<div id="byte_range"></div>
-<div id="byte_content"></div>
-<div id="fileContents"></div>
-<script src="jquery-2.2.4.min.js" type="text/javascript"></script>
-<!--<script src="maze.js" type="text/javascript"></script>-->
+<script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(document).ready(function(){
 
