--- a/mazeRefractor.html
+++ b/mazeRefractor.html
@@ -10,6 +10,7 @@
 <h1>The Maze</h1>
 <div class="random">
     <button id="random">Generate Random Maze</button>
+    <button id="resolve">Resolve maze</button>
 </div>
 
 <div class="file">
